--- a/src/Layout/Organisation/sidebar/sidebar.module.css
+++ b/src/Layout/Organisation/sidebar/sidebar.module.css
@@ -93,4 +93,10 @@
     margin: 0;
   }
   
-  
+  @media (max-width: 651px) {
+    .sidebar{
+      padding-top: 55px ;
+      z-index: 999;
+    }
+    
+  }
