--- a/src/Component/Auth/OrganisationSignup.module.css
+++ b/src/Component/Auth/OrganisationSignup.module.css
@@ -23,3 +23,10 @@ h3{
 .title{
     font-size: 25px;
 }
+
+@media (max-width: 360px) {
+    .name,.contact{
+        flex-direction: column;
+    }
+    
+}
