--- a/src/Pages/auth/Login.module.css
+++ b/src/Pages/auth/Login.module.css
@@ -24,3 +24,10 @@
     font-size: 25px;
     font-weight: 900;
 }
+
+@media (max-width : 480px) {
+    .content{
+        padding: 10px;
+    }
+    
+}
