--- a/src/Component/Auth/EmployeeLogin.module.css
+++ b/src/Component/Auth/EmployeeLogin.module.css
@@ -1,13 +1,44 @@
-.container div{
+
+.container {
     display: flex;
-    gap: 5px;
-    margin-top: 7px;
+    flex-direction: column;
+    gap: 15px;
+    margin: auto;
+    margin-top: 50px;
+    width: 100%;
+    border-radius: 8px;
+    background-color: #fff;
 }
-h3{
+
+h3 {
     margin-top: 10px;
 }
-    
-.title{
-    font-size: 25px;
-    margin-top: 50px;
+
+.inputWrapper {
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+}
+
+.error {
+    color: red;
+    font-size: 11px;
+    margin-top: 3px;
+    font-family: sans-serif;
+}
+
+.inputError {
+    border: 1px solid red !important;
+}
+
+.button {
+    display: flex;
+    justify-content: center;
+    margin-top: 10px;
+}
+
+@media (max-width: 360px) {
+    .container {
+        padding: 15px;
+    }
 }
