--- a/src/Component/Common/ActionSearchBar.module.css
+++ b/src/Component/Common/ActionSearchBar.module.css
@@ -67,6 +67,7 @@
   align-items: center;
   padding: 10px;
   cursor: pointer;
+  font-family: sans-serif;
   transition: background 0.2s ease-in-out;
 }
 
