--- a/src/Component/Organisation/metrics-cards.module.css
+++ b/src/Component/Organisation/metrics-cards.module.css
@@ -7,13 +7,13 @@
 /* Update Card */
 .updateCard {
   flex: 1;
-  background: #0a3b2c;
   color: white;
   padding: 24px;
   border-radius: 16px;
   display: flex;
   flex-direction: column;
   gap: 16px;
+  border: 1px solid #3333331d;
   min-width: 280px;
 }
 
@@ -23,6 +23,7 @@
   border-radius: 16px;
   font-size: 14px;
   width: fit-content;
+  color: #000;
 }
 
 .date {
@@ -38,7 +39,7 @@
 }
 
 .link {
-  color: white;
+  color: #000;
   text-decoration: none;
   font-size: 14px;
 }
