--- a/src/Layout/Organisation/OrganisationLayout.module.css
+++ b/src/Layout/Organisation/OrganisationLayout.module.css
@@ -1,6 +1,8 @@
 .container {
     display: flex;
     height: 100vh;
+    font-family: 'Lato-Regular';
+
 }
 
 /* Sidebar */
@@ -40,11 +42,13 @@
 }
 
 /* Menu Button */
-.menuButton, .closeButton {
+.menuButton,
+.closeButton {
     position: fixed;
     top: 20px;
     left: 20px;
-    width: 35px;height: 35px;
+    width: 35px;
+    height: 35px;
     background: transparent;
     display: flex;
     align-items: center;
@@ -54,12 +58,14 @@
     cursor: pointer;
     z-index: 1000;
 }
-.menuButton .line{
+
+.menuButton .line {
     width: 25px;
     height: 3px;
     background: black;
-    transition: all 0.3s ease-in-out;  
+    transition: all 0.3s ease-in-out;
 }
+
 .closeButton .line {
     width: 25px;
     height: 3px;
@@ -71,15 +77,17 @@
 
 /* Close Button Animation */
 .closeButton .line:first-child {
-    transform: rotate(45deg) ;
+    transform: rotate(45deg);
 }
 
 .closeButton .line:last-child {
-    transform: rotate(-45deg) ;
+    transform: rotate(-45deg);
 }
 
 @media (min-width: 651px) {
-    .menuButton, .closeButton {
+
+    .menuButton,
+    .closeButton {
         display: none;
     }
 }
