--- a/src/Pages/organisation/LeadPanel.module.css
+++ b/src/Pages/organisation/LeadPanel.module.css
@@ -161,6 +161,9 @@
 .searchright .view {
     border-radius: 5px;
     min-width: 105px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     margin-right: 10px;
     padding: 3px;
     border: 1px solid #3333331d;
