--- a/src/Component/Organisation/Grid.module.css
+++ b/src/Component/Organisation/Grid.module.css
@@ -5,9 +5,9 @@
 }
 
 .cards {
-  display: grid;
-  grid-template-columns: repeat(4, 1fr); /* Ensures 4 cards per row */
+  display: flex;
   gap: 16px;
+  flex-wrap: wrap;
 }
 
 .card {
@@ -15,10 +15,12 @@
   padding: 20px;
   border-radius: 16px;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+  flex: 1;
   transition: transform 0.3s ease, box-shadow 0.3s ease;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+  min-width: 260px;
   position: relative;
 }
 
