--- a/src/Component/Organisation/LeadPanel/Table.module.css
+++ b/src/Component/Organisation/LeadPanel/Table.module.css
@@ -1,6 +1,8 @@
 .tableContainer {
   width: 100%;
   overflow-x: auto;
+  border-radius: 10px;
+  border: 1px solid #0000001d;
   margin-top: 50px;
 }
 
