--- a/src/Layout/Organisation/sidebar/header.module.css
+++ b/src/Layout/Organisation/sidebar/header.module.css
@@ -36,6 +36,7 @@
     display: flex;
     align-items: center;
     background: #f5f5f5;
+    gap: 10px;
     border-radius: 8px;
     padding: 8px 16px;
     flex: 1;
@@ -53,6 +54,9 @@
     width: 40px;
     height: 40px;
     border-radius: 8px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     border: 1px solid #eee;
     background: white;
     cursor: pointer;
