--- a/src/Layout/Organisation/sidebar/sidebar.module.css
+++ b/src/Layout/Organisation/sidebar/sidebar.module.css
@@ -2,7 +2,7 @@
   width: 280px;
   background-color: #0a3b2c;
   color: white;
-  z-index: 11212;
+  z-index: 999999999;
   padding: 24px 16px;
   display: flex;
   height: 100vh;
