--- a/src/Pages/organisation/Employees.module.css
+++ b/src/Pages/organisation/Employees.module.css
@@ -1,7 +1,8 @@
 .container {
-    max-width: 1200px;
+    max-width: 100%;
     padding: 20px;
     margin: 0 auto;
+    /* overflow: scroll ; */
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
