--- a/src/Layout/Organisation/sidebar/header.module.css
+++ b/src/Layout/Organisation/sidebar/header.module.css
@@ -1,10 +1,15 @@
 
 /* Header */
+
 .header {
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 16px 24px;
+    top: 0;
+    width: calc(100vw - 280px);
+    background: white;
+    position: fixed;
     border-bottom: 1px solid #eee;
     flex-wrap: wrap;
   }
@@ -29,7 +34,7 @@
     display: flex;
     align-items: center;
     gap: 16px;
-    flex-wrap: wrap;
+    /* flex-wrap: wrap; */
   }
   
   .search {
@@ -77,7 +82,6 @@
 
   @media (max-width: 768px) {
     .header {
-      flex-direction: column;
       gap: 12px;
     }
   
@@ -95,3 +99,14 @@
       justify-content: center;
     }
   }  
+
+  @media (max-width : 650px) {
+    .header{
+        width: 100%;
+    }
+    .headerLeft h1{
+      text-align: center;
+      flex: 1;
+      width: 250px;
+    }
+  }
