some extra changes

--- a/src/Layout/Organisation/OrganisationLayout.module.css
+++ b/src/Layout/Organisation/OrganisationLayout.module.css
@@ -48,7 +48,7 @@
 /* Menu Button */
 .menuButton,
 .closeButton {
-    position: absolute;
+    position: fixed;
     top: 13px;
     left: 20px;
     width: 33px;
