--- a/src/Component/Organisation/LeadPanel/Table.module.css
+++ b/src/Component/Organisation/LeadPanel/Table.module.css
@@ -10,7 +10,22 @@ table {
   width: 100%;
   border-collapse: collapse;
 }
+.cta{
+  padding: 6px 12px;
+  border-radius: 6px;
+  font-size: 13px;
+  font-weight: 500;
+  cursor: pointer;
+  border: 1px solid #e5e7eb;
+  background-color: white;
+  margin-right: 8px;
+  transition: all 0.5s;
+  margin-bottom: 4px;
+}
 
+.cta:hover{
+  border: 1px solid #0A3B2C;
+}
 th, td {
   padding: 12px;
   border: 1px solid #ddd;
