--- a/src/Pages/organisation/Messages.module.css
+++ b/src/Pages/organisation/Messages.module.css
@@ -1,61 +1,86 @@
-.container{
-    display: flex;
-    height: 100%;
-    position: relative;
-    width: 100%;
-    gap: 20px;
+.container {
+  display: flex;
+  height: 100%;
+  position: relative;
+  width: 100%;
+  gap: 20px;
 }
-.container>div:nth-child(1){
-    border: 1px solid #0000001d;
-    max-width: 400px;
-    min-width: 350px;
-    margin-left: 20px;
-    border-radius: 5px;
-    overflow: auto;
-    height: 95%;
+
+.container>div:nth-child(1) {
+  border: 1px solid #0000001d;
+  /* max-width: 400px; */
+  min-width: 350px;
+  margin-left: 20px;
+  border-radius: 5px;
+  overflow: auto;
+  height: 95%;
 }
-.header{
-    padding: 0 20px;
-    border-bottom: 2px solid #0000001d;
+
+.header {
+  padding: 0 20px;
+  border-bottom: 2px solid #0000001d;
 }
-.body{
-    display: flex;
-    flex-direction: column;
-    height: 90%;
-    overflow-y: auto;
+
+.body {
+  display: flex;
+  flex-direction: column;
+  height: 90%;
+  overflow-y: auto;
+}
+
+.chatBox {
+  flex: 1;
+  padding: 20px;
 }
 
 .emptyChatBox {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 95%;
-    text-align: center;
-    width: 720px;
-    background: linear-gradient(135deg, #f8f9fa, #e9ecef);
-    border-radius: 10px;
-    padding: 20px;
-    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+  display: flex;
+  flex-direction: column;
+  min-width: 300px;
+  align-items: center;
+  justify-content: center;
+  height: 95%;
+  text-align: center;
+  width: 100%;
+  background: linear-gradient(135deg, #f8f9fa, #e9ecef);
+  border-radius: 10px;
+  padding: 20px;
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+}
+
+.illustration svg {
+  width: 80px;
+  height: 80px;
+  color: #6c757d;
+  margin-bottom: 15px;
+}
+
+.emptyTitle {
+  font-size: 20px;
+  font-weight: 600;
+  color: #495057;
+  margin-bottom: 5px;
+}
+
+.emptySubtitle {
+  font-size: 14px;
+  color: #6c757d;
+  max-width: 300px;
+}
+
+@media (max-width : 1400px) {
+  .chatBox {
+    width: 100%;
   }
-  
-  .illustration svg {
-    width: 80px;
-    height: 80px;
-    color: #6c757d;
-    margin-bottom: 15px;
+
+}
+
+@media (max-width : 1000px) {
+  .chatBox{
+    width: 0;
+    display: none;
   }
-  
-  .emptyTitle {
-    font-size: 20px;
-    font-weight: 600;
-    color: #495057;
-    margin-bottom: 5px;
-  }
-  
-  .emptySubtitle {
-    font-size: 14px;
-    color: #6c757d;
-    max-width: 300px;
-  }
-  
+  .chatList{
+    width: 93%;
+    }
+}
