--- a/src/Layout/Organisation/sidebar/header.module.css
+++ b/src/Layout/Organisation/sidebar/header.module.css
@@ -11,7 +11,7 @@
     background: white;
     position: fixed;
     border-bottom: 1px solid #eee;
-    flex-wrap: wrap;
+    /* flex-wrap: wrap; */
   }
   
   .headerLeft {
